Fix for WFLY-10890, CLI client in jconsole doesn't work with JDK11