@@ -13,17 +13,24 @@ if (!$JAVA_HOME){
 
 $CLASSPATH= "$JAVA_HOME\lib\jconsole.jar;$JAVA_HOME\lib\tools.jar;$JBOSS_HOME\bin\client\jboss-cli-client.jar"
 
-$PROG_ARGS = @("-J-Djava.class.path=$CLASSPATH")
+& $JAVA_HOME\bin\java.exe --add-modules=java.se -version 2> $nul
+
+if ($LASTEXITCODE -eq 0) {
+ $PROG_ARGS= @("-J--add-modules=jdk.unsupported", "-J-Djava.class.path=$CLASSPATH")
+} else {
+ $PROG_ARGS = @("-J-Djava.class.path=$CLASSPATH")
+}
+
 if ($ARGS){
-	$PROG_ARGS += $ARGS
+ $PROG_ARGS += $ARGS
 }
 
 echo $PROG_ARGS
 
 try{
-	pushd $JBOSS_HOME
-	& $JAVA_HOME\bin\jconsole.exe $PROG_ARGS
+    pushd $JBOSS_HOME
+    & $JAVA_HOME\bin\jconsole.exe $PROG_ARGS
 }finally{
-	popd
-	Env-Clean-Up
+    popd
+    Env-Clean-Up
 }
